--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="google-site-verification" content="QfT0nSMBeEjA3Eok4iSehpPNZ1K_Z-RjJnDpnmFApHc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sigue toda la pasión del deporte argentino. Descubre cómo ver TyC Sports en vivo gratis a través de HDFutbolLibre.com con la mejor calidad HD.">
@@ -165,4 +166,5 @@
     </footer>
 
 </body>
+
 </html>
